--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EXPO_PUBLIC_API_BASE_URL=https://api.steppe.dev/scoreapp
 EXPO_PUBLIC_API_TIMEOUT=10000
-EXPO_PUBLIC_WEB_MANAGEMENT_URL=https://llf-webview-fjldjo8ap-alinakassyms-projects.vercel.app
+EXPO_PUBLIC_WEB_MANAGEMENT_URL=https://llf-webview.vercel.app/
